--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>SC2AIBots</groupId>
-    <artifactId>LazyBot</artifactId>
+    <artifactId>com.mrceej.sc2.lazybot.LazyBot</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
